# phips-os

./: .editorconfig  .gitignore  Cargo.toml  Makefile  flake.nix  rust-toolchain.toml
kernel/: Cargo.toml  build.rs  link.lds  x86_64-unknown-kernel.json.md
kernel-lib/: Cargo.toml
kernel-lib/src/: lib.rs
kernel/src/: main.rs  panic_handler.rs
uefi-loader/: Cargo.toml
uefi-loader-lib/: Cargo.toml
uefi-loader-lib/src/: lib.rs
uefi-loader/src/: logger.rs  main.rs
util/: Cargo.toml
util/src/: lib.rs  logging.rs  paging.rs
ws/: README.md
ws/bins/kernel/: ARCHITECTURE.md  Cargo.toml  link.lds  x86_64-unknown-kernel.json
ws/bins/kernel/src/: heap.rs  logger.rs  main.rs  panic_handler.rs  stack.rs
ws/bins/uefi-loader/: Cargo.toml
ws/bins/uefi-loader/src/: config.rs  heap.rs  logger.rs  main.rs  panic_handler.rs
ws/libs/kernel-lib/: Cargo.toml
ws/libs/kernel-lib/src/: boot_information.rs  lib.rs  memory_map.rs
ws/libs/loader-lib/: Cargo.toml
ws/libs/loader-lib/src/: boot_information.rs  kernel_file.rs  lib.rs
ws/libs/uefi-loader-lib/src/: lib.rs
ws/libs/util/: Cargo.toml
ws/libs/util/src/: lib.rs  mem.rs  paging.rs
ws/libs/util/src/drivers/: debugcon.rs  mod.rs
ws/libs/util/src/logging/: debugcon.rs  mod.rs
ws/libs/util/src/sync/: mod.rs
