[workspace]
members = [
  "ws/bins/kernel",
  "ws/libs/kernel-lib",
  "ws/bins/uefi-loader",
  "ws/libs/uefi-loader-lib",
  "ws/libs/util"
]
resolver = "3"


[workspace.package]
license = "Apache-2.0 OR MIT"
publish = false
edition = "2024"
rust-version = "1.89.0"


[workspace.dependencies]
anyhow = { version = "1.0.99", default-features = false }
bit_ops = { version = "0.1.16", default-features = false }
elf = { version = "0.8.0", default-features = false }
log = { version = "0.4.28", default-features = false }
uefi = { version = "0.35.0", default-features = false }


[profile.dev]
opt-level = 1 # Reduce stack usage + more readable assembly
panic = "abort"


[profile.release]
panic = "abort"


[profile.release.package."kernel"]
opt-level = "z"


[profile.release.package."uefi-loader"]
opt-level = "z"
