[workspace]
members = [
  "ws/bins/kernel",
  "ws/bins/uefi-loader",
  "ws/libs/kernel-lib",
  "ws/libs/loader-lib",
  "ws/libs/util"
]
resolver = "3"


[workspace.package]
license = "Apache-2.0 OR MIT"
publish = false
edition = "2024"
rust-version = "1.89.0" # let chains


[workspace.dependencies]
anyhow = { version = "1.0.99", default-features = false }
bitflags = { version = "2.9.4", default-features = false }
bit_ops = { version = "0.1.16", default-features = false }
elf = { version = "0.8.0", default-features = false }
heapless = { version = "0.9.1", default-features = false }
log = { version = "0.4.28", default-features = false }
serde = { version = "1.0.225", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
spin = { version = "0.10.0", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
uefi = { version = "0.35.0", default-features = false }
uefi-raw = { version = "0.11.0", default-features = false }
x86 = { version = "0.52.0", default-features = false }
talc = { version = "4.4.3", default-features = false }
zerocopy = { version = "0.8.27", default-features = false }


[profile.dev]
opt-level = 1 # Reduce stack usage + more readable assembly
panic = "abort"


[profile.release]
panic = "abort"


[profile.release.package."kernel"]
opt-level = "z"


[profile.release.package."uefi-loader"]
opt-level = "z"
