[package]
name = "uefi-loader-lib"
version = "0.1.0"
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
anyhow = { workspace = true }
elf = { workspace = true }
uefi = { workspace = true, features = ["alloc"] }
util = { path = "../util" }
log = "0.4.28"
