[package]
name = "kernel"
description = """
Kernel binary of PhipsOS.
"""
version = "0.1.0"
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
kernel-lib = { path = "../../libs/kernel-lib"}
util = { path = "../../libs/util" }
log = "0.4.28"
