[package]
name = "uefi-loader"
version = "0.1.0"
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
uefi = { workspace = true, features = ["alloc"] }
uefi-loader-lib = { path = "../../libs/uefi-loader-lib"}
util = { path = "../../libs/util" }
