[package]
name = "kernel-lib"
description = """
Common definitions and functionality of the PhipsOS kernel.
"""
version = "0.1.0"
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
bitflags = { workspace = true }
util = { path = "../util" }
zerocopy = { workspace = true, features = ["alloc", "derive"] }
