[package]
name = "loader-lib"
description = """
Common definitions and functionality for PhipsOS OS-loaders.
"""
version = "0.1.0"
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
anyhow = { workspace = true }
elf = { workspace = true }
util = { path = "../util" }
thiserror = { workspace = true }
log = "0.4.28"
