[package]
name = "util"
description = """
Common definitions and functionality for all PhipsOS components.
"""
version = "0.1.0"
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bit_ops = { workspace = true }
log = { workspace = true }
heapless = { workspace = true }
spin = { workspace = true, features = ["once"] }
x86 = { workspace = true }
